Fix issues with positioning the qa button and scrolling. Trigger a fake focus event to re-position the button when scrolling. If the editor is overlapped by another another element, hide the qa button. This fixes the issues with the gmail compose window that overlaps the reply box, and with scrolling long messages in the gmail compose window. Should also make the default btn positioning much more reliable.

--- a/src/content/css/content.styl
+++ b/src/content/css/content.styl
@@ -263,6 +263,13 @@ $padding = 8px;
     opacity: .6;
 }
 
+/* hide the qa button when it wouldn't be placed on top of the editor
+ * used by the default qabtn positioning method.
+ */
+.gorgias-hide-qa-btn .gorgias-qa-btn {
+    visibility: hidden !important;
+}
+
 .gorgias-qa-btn-badge {
     display: none;
 
